<resources>

    <string name="app">test</string>
    <string name="app_name">课来了</string>

    <!--style_title-->
    <string name="myMsg">我的消息</string>

    <!--错误信息-->

    <string name="empty_data">OMG!这里空空如也…</string>
    <string name="networkError">请检查网络连接</string>
    <string name="timeoutError">网络请求超时,请稍后重试！</string>
    <string name="connectError">无法连接到服务器！</string>
    <string name="retry">重试</string>

    <!--首页底部导航栏-->

    <string name="nav_home">首页</string>
    <string name="nav_mine">我的</string>
    <string name="nav_publish">发布</string>

    <!--注册-->
    <string name="reg">注册</string>
    <string name="reg_title">欢迎注册</string>
    <string name="phone">手机号</string>
    <string name="reg_hint_phone">请输入手机号</string>
    <string name="password">密码</string>
    <string name="reg_hint_pass">设置您的登录密码，至少6位</string>
    <string name="code">验证码</string>
    <string name="reg_hint_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="complete">完成</string>
    <string name="reg_protocol">点击完成代表您已同意《用户使用协议》</string>
    <string name="reg_success">注册成功</string>
    <string name="reg_success_desc">您已注册成功，可以发布/搜寻内容啦</string>
    <string name="stroll_around">先逛逛</string>

    <!--登录-->
    <string name="login_pass_title">密码登录</string>
    <string name="login_pass_hint">请输入密码，至少6位</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="login">登录</string>
    <string name="fast_login">快捷登录</string>
    <string name="other_login">其他方式登录</string>
    <string name="bind_phone_desc">为了您的账户安全，请绑定手机后再进行操作</string>
    <string name="find_pass">找回密码</string>
    <string name="reg_phone">注册手机号</string>
    <string name="new_pass">新密码</string>
    <string name="sure_pass">确认密码</string>
    <string name="sure_pass_desc">请再次输入密码</string>
    <!--首页-->

    <string name="defaultLocation">上海市</string>
    <string name="message">消息</string>
    <string name="more">更多</string>
    <string name="type">类型</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="sure">确定</string>

    <string name="system_hint">系统提示</string>
    <string name="pending_review">待审核</string>
    <string name="invite">邀请</string>
    <string name="invite_users">邀请用户</string>
    <string name="applicants">应聘者</string>

    <string name="go_publish">去发布</string>
    <string name="publish">发布</string>
    <string name="train">培训</string>
    <string name="train_info">让学习更简单</string>
    <string name="field">场地</string>
    <string name="field_info">发现精彩活动场地</string>
    <string name="substitute">代课</string>
    <string name="substitute_info">你的代课好帮手</string>
    <string name="tutor">家教</string>
    <string name="tutor_info">一对一辅导</string>
    <string name="active">活动</string>
    <string name="active_info">生活更精彩</string>
    <string name="place">地点</string>
    <string name="heat">热度</string>
    <string name="price">价格</string>
    <string name="class_time">\u3000时间</string>

    <!--定位-->
    <string name="gps_location_city">GPS定位城市</string>
    <string name="open_city">开通城市</string>
    <string name="location_desc">目前只开通上海市，\n更多城市敬请期待。</string>
    <!--发布-->

    <string name="publish_choice">在这里选择你要发布的内容吧</string>
    <string name="publish_train">发布培训</string>
    <string name="publish_train_prompt">轻便好用，轻松管理培训项目</string>
    <string name="publish_field">发布场地</string>
    <string name="publish_field_prompt">有空闲场地，帮你高效推广</string>
    <string name="publish_substitute">发布代课</string>
    <string name="publish_substitute_prompt">想找人代课，随时随地想找就找</string>
    <string name="publish_tutor">发布家教</string>
    <string name="publish_tutor_prompt">快速发现你身边的好家教</string>
    <string name="publish_activity">发布活动</string>
    <string name="publish_activity_prompt">方便快捷，轻松发布活动</string>

    <!--发布培训-->
    <string name="publish_title">发布标题</string>
    <string name="please_input_title">请在此输入标题</string>
    <string name="filed_location">场地位置</string>
    <string name="current_location">所在地区</string>
    <string name="detail_address">详细地址</string>
    <string name="street_building_number">街道、楼牌号等</string>
    <string name="training_cost">培训费用(次)</string>
    <string name="field_cost">场地费用(次)</string>
    <string name="single_cost">单次费用</string>
    <string name="rmb">¥</string>
    <string name="group_purchase">团购（非必填，如无团购可不填写）</string>
    <string name="separate_purchase_cost">单独购买费用</string>
    <string name="group_purchase_cost">拼团购买费用</string>
    <string name="people_limit">成团人数限制</string>
    <string name="time_limit">团购时间限制</string>
    <string name="train_long">单次培训时长</string>
    <string name="field_long">单次可用时长</string>
    <string name="hour">小时</string>
    <string name="accommodating_population">容纳人数</string>
    <string name="people">人</string>
    <string name="field_square">场地空间</string>
    <string name="per_square_metre">㎡</string>
    <string name="train_time">培训时间</string>
    <string name="field_time">营业时间</string>
    <string name="site_facility">场地设施</string>
    <string name="common_facility">通用设施</string>
    <string name="wifi">WIFI</string>
    <string name="parking_lot">停车场</string>
    <string name="air_conditioner">空调</string>
    <string name="television">电视</string>
    <string name="conference_facility">会议设施</string>
    <string name="special_facility">特殊设施</string>
    <string name="training_brief">培训简介</string>
    <string name="class_brief">课程简介</string>
    <string name="field_server">场地服务</string>
    <string name="site_server">请描述一下您的场地服务情况</string>
    <string name="work_experience">请描述一下您的特长和工作经历</string>
    <string name="photo_video">照片/视频</string>

    <string name="class_classify">课程分类</string>
    <string name="class_time2">课程时间</string>
    <string name="class_time3">上课时段</string>
    <string name="class_address">上课地点</string>
    <string name="art">美术</string>
    <string name="sketch">素描</string>
    <string name="adult">成人</string>
    <string name="child">儿童</string>

    <!--我的-->

    <string name="my_trip">我的行程</string>
    <string name="my_publish">我的发布</string>
    <string name="my_partake">我的参与</string>
    <string name="my_cheques">我的收款</string>
    <string name="invitation_record">邀约记录</string>
    <string name="my_profile">我的简介</string>
    <string name="my_collection">我的收藏</string>
    <string name="feedback">意见反馈</string>
    <string name="collection">收藏</string>
    <string name="setting">设置</string>
    <string name="business_cooperation">商务合作</string>
    <string name="ordinary_member">普通会员</string>


    <!--完善信息-->
    <string name="head">头像</string>
    <string name="name">姓名</string>
    <string name="name_space">姓\u00A0\u00A0\u00A0\u00A0名:</string>
    <string name="hint_name">输入姓名</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="city">所在城市</string>
    <string name="bind_phone">绑定手机</string>
    <string name="identity_verification">身份验证</string>
    <string name="unverified">未验证</string>
    <string name="verified_desc">注意事项：\n1、系统会对您每次提交的信息进行审核，审核通过后可\n在我的简介中查看。\n2、您的个人信息将在课多多得到严格保密。</string>
    <string name="commit_verified">提交验证</string>
    <string name="personal_documents">个人证件</string>
    <string name="id_card_front">身份证正面</string>
    <string name="id_card_front_desc">（国徽面）</string>
    <string name="id_card_back">身份证反面</string>
    <string name="id_card_front_back">（个人信息面）</string>
    <string name="select_file">选择文件</string>
    <!--我的发布-->

    <string name="list_train">培训列表</string>
    <string name="list_field">场地列表</string>
    <string name="list_substitute">代课列表</string>
    <string name="list_tutor">家教列表</string>
    <string name="list_activity">活动列表</string>
    <string name="candidate">候选</string>
    <string name="winning_bid">中标</string>
    <!--我的收款-->

    <string name="detailed">明细</string>
    <string name="bind_wechat_cheques">绑定微信收款</string>
    <string name="bind_alipay_cheques">绑定支付宝收款</string>
    <string name="default_way">默认</string>
    <string name="default_account">默认收款账户</string>
    <string name="unbind">未绑定</string>
    <string name="binding">已绑定</string>
    <string name="prompt_cheques_bind">绑定账户后，订单结算完成后自动打入您的账户</string>

    <!--意见反馈-->

    <string name="commit">提交</string>
    <string name="save">保存</string>
    <string name="prompt_feedback">亲爱的用户您好，如果您对我们有任何建议，请在此留言，我们将不断改进。</string>

    <!--设置-->

    <string name="login_password">登录密码</string>
    <string name="logout">退出登录</string>
    <string name="about_us">关于我们</string>
    <string name="invitation_points">邀请得积分</string>
    <string name="help">帮助</string>
    <string name="modify">修改</string>
    <string name="about_name">课来了 APP</string>
    <string name="current_version">当前版本</string>
    <string name="customer_service">课来了客服</string>
    <string name="phoneNo">18818203413</string>
    <string name="qqNo">18818203413</string>
    <string name="wxNo">18818203413</string>
    <string name="copyright">上海万宾文化传媒有限公司\n版权所有</string>

    <!--邀请-->
    <string name="share_invite">邀请得积分</string>
    <string name="share_invite_desc">邀请一起来参与代课平台</string>

    <!--积分-->
    <string name="point">积分</string>
    <string name="my_point">我的积分</string>
    <string name="point_description">积分说明</string>
    <string name="novice_function">新手功能</string>
    <string name="daily_function">每日功能</string>
    <string name="evaluate">评价</string>

    <!--订单详情-->
    <string name="order_detail">订单详情</string>
    <string name="publish_prompt_recommit">您提交的证件不清晰，请您再次提交！</string>
    <string name="delete">删除</string>
    <string name="already_cancel">已取消</string>
    <string name="republish">再次发布</string>
    <string name="cancel_publish">取消发布</string>
    <string name="goPay">去支付</string>

    <string name="cancel_order">取消订单</string>
    <string name="confirm_cancel_order">确定取消订单</string>
    <string name="cancel_prompt2">
    代课取消风险：\n
        1、在距代课开始时间6小时以上取消，会有违约纪录显示在个人主页；\n
        2、在距代课开始时间2－6小时内取消，会有违约纪录显示在个人主页，积分减500分；\n
        3、在距代课开始时间2小时内取消，会有违约纪录显示在个人主页，积分减1000分。\n
        4、在代课开始之后不能取消。
    </string>

    <string name="cancel_prompt">
    课程取消风险：\n1、在没有确认代课者之前可以无责取消；\n2、确认代课者以后，在离代课时间6小时之外取消，\n会有信用纪录，但不扣款；\n3、确认代课者以后，在离代课时间2-6小时之内取\n消，会有违约纪录显示在个人主页，积分减去500积\n分，扣除订单金额30%的费用；\m4、确认代课者以后，在离代课时间2小时之内取消,\n 会有违约纪录显示在个人主页，积分减去1000积分，\n扣除订单金额50%的费用；\n5、在代课开始之后不能取消。
    </string>

    <string name="application_success_desc">您的应聘信息已经发送给发布\n者，请耐心等待中标结果。</string>
</resources>
