<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">

        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="30pt"
            android:text="@string/publish_title" />

        <EditText
            android:id="@+id/edit_title"
            style="@style/style_edit_publish"
            android:layout_marginTop="35pt"
            android:hint="@string/please_input_title" />

        <View style="@style/style_view_line_publish" />

        <View
            style="@style/style_view_divider"
            android:layout_marginTop="42pt" />


        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="30pt"
            android:text="@string/filed_location" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35pt">

            <TextView
                android:id="@+id/test_location"
                style="@style/style_font_default_28pt"
                android:layout_marginStart="60pt"
                android:text="@string/current_location" />

            <EditText
                android:id="@+id/edit_location"
                style="@style/style_edit_publish"
                android:layout_toEndOf="@id/test_location"
                android:hint="@string/current_location" />

            <ImageView
                style="@style/style_more_btn"

                android:contentDescription="@string/app" />
        </RelativeLayout>

        <View style="@style/style_view_line_publish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80pt">

            <TextView
                style="@style/style_font_default_28pt"
                android:layout_marginStart="60pt"
                android:text="@string/detail_address" />

            <EditText
                android:id="@+id/edit_street"
                style="@style/style_edit_publish"
                android:hint="@string/street_building_number" />
        </LinearLayout>

        <View style="@style/style_view_line_publish" />

        <View
            style="@style/style_view_divider"
            android:layout_marginTop="48pt" />

        <View style="@style/style_view_divider" />

        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="48pt"
            android:text="@string/training_cost" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35pt">

            <TextView
                style="@style/style_font_gray_28pt"
                android:layout_marginStart="60pt"
                android:text="@string/training_cost" />

            <EditText
                android:id="@+id/edit_cost"
                style="@style/style_edit_publish"
                android:hint="@string/rmb" />
        </LinearLayout>

        <View style="@style/style_view_line_publish" />


        <View
            style="@style/style_view_divider"
            android:layout_marginTop="40pt" />

        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="55pt"
            android:text="@string/group_purchase" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36pt">

            <TextView
                style="@style/style_font_gray_28pt_60pt"
                android:layout_marginTop="0pt"
                android:text="@string/separate_purchase_cost" />

            <EditText
                android:id="@+id/edit_separate_cost"
                style="@style/style_edit_publish"
                android:hint="@string/rmb" />
        </LinearLayout>

        <View style="@style/style_view_line_publish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80pt">

            <TextView
                style="@style/style_font_gray_28pt_60pt"
                android:layout_marginTop="0pt"
                android:text="@string/group_purchase_cost" />

            <EditText
                android:id="@+id/edit_group_cost"
                style="@style/style_edit_publish"
                android:hint="@string/rmb" />
        </LinearLayout>

        <View style="@style/style_view_line_publish" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90pt">

            <TextView
                android:id="@+id/test_people_limit"
                style="@style/style_font_gray_28pt_60pt"
                android:layout_marginTop="0pt"
                android:text="@string/people_limit" />

            <EditText
                android:id="@+id/edit_people_limit"
                style="@style/style_edit_publish"
                android:layout_toEndOf="@id/test_people_limit"
                android:hint="1-100人" />

            <ImageView
                style="@style/style_more_btn"
                android:contentDescription="@string/app" />
        </RelativeLayout>

        <View style="@style/style_view_line_publish" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90pt">

            <TextView
                android:id="@+id/test_time_limit"
                style="@style/style_font_gray_28pt_60pt"
                android:layout_marginTop="0pt"
                android:text="@string/time_limit" />

            <EditText
                android:id="@+id/edit_time_limit"
                style="@style/style_edit_publish"
                android:layout_toEndOf="@id/test_time_limit"
                android:hint="30天" />

            <ImageView
                style="@style/style_more_btn"
                android:contentDescription="@string/app" />
        </RelativeLayout>

        <View style="@style/style_view_line_publish" />

        <View
            style="@style/style_view_divider"
            android:layout_marginTop="40pt" />

        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="50pt"
            android:text="@string/train_long" />

        <EditText
            android:id="@+id/edit_hour"
            style="@style/style_edit_publish"
            android:layout_marginTop="15pt"
            android:hint="@string/hour" />

        <View style="@style/style_view_line_publish" />

        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="50pt"
            android:text="@string/accommodating_population" />

        <EditText
            android:id="@+id/edit_people"
            style="@style/style_edit_publish"
            android:layout_marginTop="15pt"
            android:hint="@string/people" />

        <View style="@style/style_view_line_publish" />

        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="50pt"
            android:text="@string/field_square" />

        <EditText
            android:id="@+id/edit_square"
            style="@style/style_edit_publish"
            android:layout_marginTop="15pt"
            android:hint="@string/per_square_metre" />

        <View style="@style/style_view_line_publish" />

        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="50pt"
            android:text="@string/train_time" />

        <EditText
            android:id="@+id/edit_train_time"
            style="@style/style_edit_publish"
            android:layout_marginTop="15pt" />

        <View style="@style/style_view_line_publish" />

        <View
            style="@style/style_view_divider"
            android:layout_marginTop="50pt" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50pt">

            <TextView
                style="@style/style_font_default_32pt_40pt"
                android:text="@string/site_facility" />

            <ImageView
                style="@style/style_more_btn"
                android:contentDescription="@string/app" />
        </RelativeLayout>


        <TextView
            style="@style/style_font_gray_28pt_60pt"
            android:layout_marginTop="35pt"
            android:text="@string/common_facility" />


        <TextView
            style="@style/style_font_gray_28pt_60pt"
            android:layout_marginTop="40pt"
            android:text="@string/conference_facility" />


        <TextView
            style="@style/style_font_gray_28pt_60pt"
            android:layout_marginTop="40pt"
            android:layout_marginBottom="50pt"
            android:text="@string/special_facility" />

        <View style="@style/style_view_divider" />

        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="50pt"
            android:text="@string/training_brief" />

        <include
            layout="@layout/layout_photo_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/style_button_no_margin"
            android:layout_width="match_parent"
            android:layout_height="98pt"
            android:layout_marginTop="88pt"
            android:text="@string/publish" />
    </LinearLayout>

</ScrollView>