<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">

        <TextView
            style="@style/style_font_default_32pt_40pt"
            android:layout_marginTop="30pt"
            android:text="@string/publish_title" />
        <EditText
            android:id="@+id/edit_title"
            style="@style/style_edit_publish"
            android:layout_marginTop="35pt"
            android:hint="@string/please_input_title" />

        <View style="@style/style_view_line_publish" />

        <View
            style="@style/style_view_divider"
            android:layout_marginTop="42pt" />

        <TextView
            style="@style/style_button_no_margin"
            android:layout_width="match_parent"
            android:layout_height="98pt"
            android:layout_marginTop="88pt"
            android:text="@string/publish" />
    </LinearLayout>

</ScrollView>