<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_fillet_white">

        <TextView
            android:id="@id/txt_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/img_icon"
            android:gravity="start"
            tools:text="@string/publish_train" />

        <TextView
            android:id="@id/txt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_type"
            tools:text="@string/publish_train_prompt" />

        <ImageView
            android:id="@id/img_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app"
            tools:src="@mipmap/ic_nav_home_blue" />

    </RelativeLayout>

</LinearLayout>